name: knob
version: 0.1.1
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: Naïm Favier <n@monade.li>
build-type: Simple
cabal-version: >= 1.8
category: System
stability: experimental
homepage: https://github.com/ncfavier/knob
bug-reports: https://github.com/ncfavier/knob/issues

synopsis: Memory-backed handles
description:
  Create memory-backed 'Handle's, referencing virtual files. This is
  mostly useful for testing 'Handle'-based APIs without having to
  interact with the filesystem.
  .
  > import Data.ByteString (pack)
  > import Data.Knob
  > import System.IO
  >
  > main = do
  >     knob <- newKnob (pack [])
  >     h <- newFileHandle knob "test.txt" WriteMode
  >     hPutStrLn h "Hello world!"
  >     hClose h
  >     bytes <- Data.Knob.getContents knob
  >     putStrLn ("Wrote bytes: " ++ show bytes)

extra-source-files:
  scripts/common.bash
  scripts/run-coverage
  scripts/run-tests
  --
  tests/knob-tests.cabal
  tests/KnobTests.hs

source-repository head
  type: head
  location: https://github.com/ncfavier/knob

library
  hs-source-dirs: lib
  ghc-options: -Wall

  build-depends:
      base >= 4.2 && < 4.15
    , bytestring >= 0.9
    , transformers >= 0.2

  exposed-modules:
    Data.Knob
