name: knob-tests
version: 0
build-type: Simple
cabal-version: >= 1.8

flag coverage
  default: False
  manual: True

executable knob_tests
  main-is: KnobTests.hs
  ghc-options: -Wall
  hs-source-dirs: ../lib,.
  other-modules: Data.Knob

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base >= 4.15 && < 5
    , bytestring >= 0.9 && < 0.12
    , chell >= 0.2 && < 0.6
    , transformers >= 0.2 && < 0.7
